# OPC-Client-X64

./: CMakeLists.txt
OPCClientToolKit/: CMakeLists.txt  OPCClient.cpp  OPCClient.h  OPCClientToolKitDLL.h  OPCGroup.cpp  OPCGroup.h  OPCHost.cpp  OPCHost.h  OPCItem.cpp  OPCItem.h  OPCItemData.h  OPCProperties.h  OPCServer.h  OpcEnum.h  Transaction.h  opcClientToolKitConfig.cmake.in  opccomn.h  opcda.h
